--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "deploy": "juno deploy"
   },
   "devDependencies": {
     "@astrojs/check": "^0.9.4",
@@ -25,7 +26,6 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@astrojs/node": "^9.0.1",
     "@astrojs/react": "^4.1.5",
     "@sanity/astro": "^3.1.9",
     "@sanity/client": "^6.25.0",
