--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "vite": "^6.0.7"
   },
   "dependencies": {
     "@astrojs/react": "^4.1.5",
@@ -36,5 +37,10 @@
     "react-dom": "^19.0.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1"
+  },
+  "engines": {
+    "node": "^20",
+    "pnpm": "^9",
+    "npm": "please use pnpm"
   }
 }
