--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,7 @@ jobs:
           else
             echo "should_run=true" >> $GITHUB_OUTPUT
           fi
+          echo "should_run=$IS_TEMPLATE"
 
   build:
     needs: check_run_conditions
@@ -30,24 +31,11 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
-        with:
-          run_install: false
-
-      - name: Install NodeJS
-        uses: actions/setup-node@v4
-        with:
-          node-version-file: '.node-version'
-          registry-url: 'https://registry.npmjs.org'
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        shell: bash
-        run: pnpm i --frozen-lockfile
+      - name: Setup NodeJS
+        uses: ./.github/actions/setup-node
 
       - name: Build
-        run: npm run build
+        run: pnpm build
 
       - name: Deploy to Juno
         uses: junobuild/juno-action@main
