--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "astro preview",
     "astro": "astro",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "deploy": "juno deploy"
   },
   "devDependencies": {
