--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,7 +21,9 @@ jobs:
           else
             echo "should_run=true" >> $GITHUB_OUTPUT
           fi
-          echo "should_run=$IS_TEMPLATE"
+      - name: Print should_run
+        run: |
+          echo "should_run: ${{ steps.check_template.outputs.should_run }}""
 
   build:
     needs: check_run_conditions
